--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,6 +10,9 @@
     max-width: var(--width-container);
     margin: 20px 0px 100px 0px;
 }
+.headerContainer.listMode{
+    margin: 20px 0px 0px 0px;
+}
 .headerList{
     display: flex;
     gap: 40px;
@@ -38,13 +41,13 @@
 }
 
 .headerSearch{
-    height: 30px;
+    height: 50px;
     background-color: white;
     border: 3px solid #febb02;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 10px 0px;
+    padding: 20px 0px;
     border-radius: 5px;
     position: absolute;
     bottom: -25px;
@@ -72,9 +75,14 @@
 .date{
     position: absolute;
     top: 50px;
+    z-index: 2;
+    -webkit-box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
 }
 
 .options{
+    z-index: 2;
     position: absolute;
     top: 50px;
     background-color: #fff;
